--- a/res/views/index.html
+++ b/res/views/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <title>HQ Web UI</title>
+  <link rel="stylesheet" href="/ui/bundle.css?v={{ CommitHash }}">
+  <script src="/ui/bundle.js?v={{ CommitHash }}" async></script>
 </head>
 <body>
 <div>{{ CommitHash }}</div>
