--- a/res/views/index.html
+++ b/res/views/index.html
@@ -11,7 +11,11 @@
 <body>
 <div id="app"></div>
 <script>
-var appConfig = {basename: "{{ Basename }}", version: "{{ Version }}", commitHash: "{{ CommitHash }}"};
+var appConfig = {
+  basename: "{{ Basename }}",
+  version: "{{ Version }}",
+  commitHash: "{{ CommitHash }}"
+};
 </script>
 <script src="{{ Basename }}/assets/vendor.bundle.js?v={{ CommitHash }}"></script>
 <script src="{{ Basename }}/assets/bundle.js?v={{ CommitHash }}"></script>
