--- a/ui/style.scss
+++ b/ui/style.scss
@@ -1,5 +1,43 @@
 @import '~semantic-ui-css/semantic.min.css';
 
-.page-title {
-  padding-bottom: 40px;
+// see https://github.com/Semantic-Org/Semantic-UI/issues/1885#issuecomment-226047499
+.text.white {
+  color: #FFFFFF;
 }
+.text.grey {
+  color: #CCCCCC;
+}
+.text.black {
+  color: #1B1C1D;
+}
+.text.yellow {
+  color: #F2C61F;
+}
+.text.teal {
+  color: #00B5AD;
+}
+.text.red {
+  color: #D95C5C;
+}
+.text.purple {
+  color: #564F8A;
+}
+.text.pink {
+  color: #D9499A;
+}
+.text.orange {
+  color: #E07B53;
+}
+.text.green {
+  color: #5BBD72;
+}
+.text.blue {
+  color: #3B83C0;
+}
+
+// custom styles
+.page-title {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
