--- a/ui/style.scss
+++ b/ui/style.scss
@@ -41,3 +41,10 @@
   padding-bottom: 30px;
 }
 
+pre {
+  white-space: pre;
+  word-wrap: break-word;
+  overflow: auto;
+  margin: 0;
+  padding: 0;
+}
